[gd_scene load_steps=4 format=1]

[ext_resource path="res://logic/back.gd" type="Script" id=1]
[ext_resource path="res://resource/graphics/menu_arrow_off.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 26.0738, 15.4127 )

[node name="back" type="Area2D"]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, -0, 0, 1, -3.32168, 1.3986 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"Script" }

[node name="Sprite" type="Sprite" parent="."]

texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

transform/pos = Vector2( -3.32168, 1.3986 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[connection signal="mouse_enter" from="." to="." method="_on_back_mouse_enter"]

[connection signal="input_event" from="." to="." method="_on_back_input_event"]

[connection signal="mouse_exit" from="." to="." method="_on_back_mouse_exit"]


